Update repo link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </svg>
       <div class="hussey__text-wrapper">
         <p>
-          <a href="https://github.com/husseyexplores/husseyexplores.TOPcalculator" class="glitchy-text repo-link">GitHub Repository Link</a>
+          <a href="https://github.com/husseyexplores/odin-pomodoro-clock" class="glitchy-text repo-link">GitHub Repository Link</a>
         </p>
           <p class="text-center glitchy-text hussey-name">HusseyExplores</p>
       </div>
